--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
     <!-- jquery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+     <!-- Moment.js Reference -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
 </head>
 
@@ -18,7 +20,7 @@
 
         <form>
             <label>Rovi Search Query:</label>
-            <input id="roviInput" type="text">
+            <!-- <input id="roviInput" type="text">
             <input id="roviSubmit" type="submit">
             <br>
             <label>Fandango Search Query:</label>
@@ -28,7 +30,7 @@
             <label>Seat Geek Search Query:</label>
             <input id="sgInput" type="text">
             <input id="sgSubmit" type="submit">
-            <br>
+            <br> -->
             <label>Grace Note Movie Show Time Lookup:</label>
             <input id="gnMovies" type="submit">
             <br>
@@ -40,6 +42,9 @@
             <br>
             <label>Grace Note What Movies are on TV Search:</label>
             <input id="gnTVMovies" type="submit">
+            <br>
+            <label>Grace Note What Get Dynamic Linup ID:</label>
+            <input id="gnLineup" type="submit">
         </form>
         <div id="apifeedback">
 
