--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap-landing-page-template/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/css/bootstrap-landing-page-template/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="assets/css/bootstrap-landing-page-template/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/bootstrap-landing-page-template/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/bootstrap-landing-page-template/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/bootstrap-landing-page-template/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/bootstrap-landing-page-template/css/landing-page.min.css" rel="stylesheet">
+    <link href="./assets/css/bootstrap-landing-page-template/css/landing-page.min.css" rel="stylesheet">
 
     <!-- jquery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -50,14 +50,8 @@
             <label>Grace Note What's on TV Search:</label>
             <input id="gnTV" type="submit">
             <br>
-            <label>Grace Note What Sports are on TV Search:</label>
-            <input id="gnSports" type="submit">
-            <br>
             <label>Grace Note What Movies are on TV Search:</label>
             <input id="gnTVMovies" type="submit">
-            <br>
-            <label>Grace Note What Get Dynamic Linup ID:</label>
-            <input id="gnLineup" type="submit">
         </form>
 
         <div id="apiFeedback"></div>
@@ -262,9 +256,9 @@
       </footer>
   
       <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="./assets/css/bootstrap-landing-page-template/vendor/jquery/jquery.min.js"></script>
+      <script src="./assets/css/bootstrap-landing-page-template/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
-</html>
+</html> 
