--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap core CSS -->
-  <link href="./assets/css/bootstrap-landing-page-template/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/css/bootstrap-landing-page-template/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="./assets/css/bootstrap-landing-page-template/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -109,7 +109,7 @@
                 <i class="icon-rocket m-auto text-primary"></i>
               </div>
               <h3>Our Suggested Pick</h3>
-              <p class="lead mb-0">Allow us to provide our own content recommendation</p>
+              <p class="lead">Allow us to provide our own content recommendation</p>
             </div>
             <button type="submit" id="ourSuggestedPick" class="btn btn-block btn-md btn-primary">Submit</button>
           </div>
@@ -154,15 +154,17 @@
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/css/bootstrap-landing-page-template/img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2 id="displayTitleOne">Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether
-            it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2 id="displayTitleOne"></h2>
+          <p class="lead" id="displayDescriptionOne"></p>
+          <p class="font-weight-light">Next Showtime Listed Below!</p>
+          <p class="font-weight-light" id="displayNextShowtimeOne">Time: </p>
+          <p class="font-weight-light" id="displayTheaterOne">Location: </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/css/bootstrap-landing-page-template/img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
+          <h2 id="displayTitleTwo"></h2>
           <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development!
             All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
         </div>
