added in the logic and output for movies in theaters. will work on movies on tv now.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
       </div>
       </div>
     </header>
+    <div class="container">
+      <button class="btn btn-primary" type="button" id="moviesInTheaters" hidden>Movies in Theaters</button>
+      <button class="btn btn-primary" type="button" id="moviesOnTV" hidden>Movies on TV</button>
+      <button class="btn btn-primary" type="button" id="tvShowsOnTV" hidden>TV Shows on TV</button>
+    </div>
   </section>
 
   <!-- Image Showcases -->
