added in the discovery quiz buttons, stitched in the display for celeb picks, changed the footer to have our app name of Watch Next in the copyright, and tried to add in a greeting when users sign in

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
+    <div class="container" id="greeting">
+      <span id="userName"></span>!
+      <img id="userImage">
+    </div>
     <div class="container">
       <button class="btn btn-primary" type="button" id="signIn">Sign In</button>
       <button class="btn btn-primary" type="button" id="logout">Logout</button>
@@ -147,6 +151,8 @@
       <button class="btn btn-primary" type="button" id="moviesInTheaters" hidden>Movies in Theaters</button>
       <button class="btn btn-primary" type="button" id="moviesOnTV" hidden>Movies on TV</button>
       <button class="btn btn-primary" type="button" id="tvShowsOnTV" hidden>TV Shows on TV</button>
+      <button class="btn btn-primary" type="button" id="celebrity" hidden>Celebrity Favorites</button>
+      <button class="btn btn-primary" type="button" id="inkBlot" hidden>Rorschach</button>
     </div>
   </section>
 
@@ -158,7 +164,7 @@
   </div>
 
 
-  
+
   <!-- Footer -->
   <footer class="footer bg-light">
     <div class="container">
@@ -181,7 +187,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Watch Next 2018. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
